add multi address/channel feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.tomcat.resource.cache-ttl=0
 spring.resources.cache.cachecontrol.no-cache=true
 spring.resources.cache.cachecontrol.s-max-age=0
 spring.resources.cache.period=0
+
+server.port=9090
